<resources>
    <string name="app_name">Adi Challenges App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">product image</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="no_results">No Results</string>
    <string name="add_review">Add Review</string>
    <string name="here_you_can_write_the_review">Here you can write the review!</string>
    <string name="add">Add</string>
    <string name="rating">Rating:</string>

</resources>