<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
    android:id="@+id/card_product_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_96"
    android:layout_marginTop="@dimen/margin_12"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginEnd="@dimen/margin_16"
    app:cardCornerRadius="@dimen/margin_8"
    android:background="@color/color_background_cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_15">

        <ImageView
            android:id="@+id/iv_product_image_item"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="@dimen/dimen_80"
            android:contentDescription="@string/product_image"
            android:src="@drawable/ic_image_place_holder"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:hint="@string/name"
                android:layout_marginBottom="@dimen/margin_5"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:hint="@string/description"
                android:layout_marginBottom="@dimen/margin_5"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_15"
                android:hint="@string/price"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>