<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="reviewsViewModel"
            type="com.example.adichallengesapp.ui.ReviewsViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddNewReviewFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="33sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_new_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_new_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/here_you_can_write_the_review"
            android:text="@{reviewsViewModel.currentReview.component4()}"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1"
        android:isIndicator="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:rating="@{reviewsViewModel.currentReview.component3()}"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:onClick="@{ () -> reviewsViewModel.saveReview()}"/>
</LinearLayout>
</layout>